# claude-im

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CAPABILITIES.md  CLAUDE.md  CONFIGURATION.md  DEPLOYMENT.md  EXTENSION.md  MAINTENANCE.md  QUICKSTART.md  README.md  STANDARD.md  TROUBLESHOOTING.md
openclaw-claude-bridge/: README.md  claude-node-cli-wrapper.py  main.py  openclaw.json  pyproject.toml  pytest.ini
openclaw-claude-bridge/claude_node_adapter/: adapter.py
openclaw-claude-bridge/config/: generator.py  settings.py
openclaw-claude-bridge/openai_compatible_api/: errors.py  server.py
openclaw-claude-bridge/openclaw_claude_bridge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
openclaw-claude-bridge/session_mapping/: backend.py  manager.py
openclaw-claude-bridge/skills/claude-node-health-check/: SKILL.md
openclaw-claude-bridge/skills/claude-node-repair/: SKILL.md
openclaw-claude-bridge/src/: claude_node_adapter.py
openclaw-claude-bridge/src/clawrelay_bridge/: __init__.py  __main__.py  config.py  fallback_manager.py  health_monitor.py  server.py  session_mapper.py
openclaw-claude-bridge/src/plugin/: claude-node-cli-backend.ts  index.ts  openclaw.plugin.json
openclaw-claude-bridge/tests/: conftest.py  test_claude_node_adapter.py  test_config.py  test_integration.py  test_openai_api.py  test_session_mapping.py  test_streaming.py  test_tmux.py
openclaw-claude-bridge/tests/integration/: test_integration_stubs.py
openclaw-claude-bridge/tests/unit/: test_bridge_server.py  (+3 more)
openclaw-claude-bridge/tmux_manager/: __init__.py  manager.py
(+190 files in other folders)
