[project]
name = "openclaw-claude-bridge"
version = "0.1.0"
description = "OpenAI-compatible API bridge between OpenClaw Gateway and claude-node"
requires-python = ">=3.10"
dependencies = [
    "starlette>=0.27.0",
    "uvicorn>=0.22.0",
    # claude-node - install separately from /private/tmp/claude-node
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["openai_compatible_api*", "claude_node_adapter*", "session_mapping*", "config*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
